[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/Game elements/Table_elements/table_element.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Table_seed" type="Area2D" groups=[
"Table_seed",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_Table_seed_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Table_seed_mouse_exited"]
